# SimsPadeOps

./: .gitignore  README.md  jinja_utils.py  jupytext.toml  pyproject.toml
analysis/: ADM_FOW_Rotor_analysis.py  ADM_FOW_Rotor_plots.py  B_0001_X_plots.ipynb  B_0001_X_plots.py  B_0003_plots.ipynb  B_0003_plots.py  F_0000_SU_X_plots.py  F_0002_SU_PI_X_plots.py  F_0002_X_plots.py  F_0003_X_plots.py  F_0004_SU_PI_plots.py  F_0004_X_plots.py  F_0005_X_SU_PI_plots.py  F_0006_X_SU_PI_plots.py  F_0007_X_plots.py  F_0016_plots.ipynb  F_0016_plots.py  F_0017X_SU.ipynb  F_0017X_SU.py  F_0019_SU_PI.ipynb  F_0019_SU_PI.py  F_0021_plots.py  F_0024_plots.py  F_0025_analysis.py  F_0026_27_28_analysis.py  F_0030_plots.py  H_0009_plots.py  analysis_utils.py  check_run_stability.ipynb  check_run_stability.py  conference_movement_exploration.ipynb  export_data.py  metadata_plots.py  modal_analysis_exploration.ipynb  modal_analysis_exploration.py  modal_analysis_exploration_og.py  movement_analysis.py  movement_exploration.ipynb  plotting_example.py  quals.py  (+5 more)
defaults/: fixed_defaults.json  floating_defaults.json  hit_defaults.json
simulations/: B_0000.py  B_0001.py  B_0002.py  B_0003.py  F_0000_SU.py  F_0000_SU_X.py  F_0000_X.py  F_0001_X.py  F_0002_SU_PI_X.py  F_0002_X.py  F_0003_SU_PI_X.py  F_0003_X.py  F_0004_SU_PI.py  F_0004_X.py  F_0005_X.py  F_0005_X_SU_PI.py  F_0006_X.py  F_0006_X_SU_PI.py  F_0007_X.py  F_0008_X_SU_PI.py  F_0009_X.py  F_0009_X_SU_PI.py  F_0009_X_SU_PI_HIT.py  F_000_X.py  F_0010_SU_PI_H.py  F_0010_X_SU_PI.py  F_0011_SU_PI.py  F_0012_SU_PI.py  F_0012_SU_PI_Cont.py  (+24 more)
(+30 files in other folders)
