[tool.poetry]
package-mode = false
name = "simspadeops"
version = "0.1.0"
description = ""
authors = ["Skylar Gering <sgering@mit.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
ipykernel = "^6.29.5"
numpy = "^2.3.1"
matplotlib = "^3.10.3"
padeopsio = {git = "https://github.com/Howland-Lab/padeopsIO.git"}
pandas = "^2.3.0"
seaborn = "^0.13.2"
pygcs = "^1.1.1"
moviepy = "^2.2.1"
unified-momentum-model = { git = "https://github.com/Howland-Lab/Unified-Momentum-Model.git"}
streamtube = {git = "https://github.com/kirbyh/streamtube.git"}
jinja2 = "^3.1.6"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
